# ChangeLog for app-backup/backup-manager
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/backup-manager/ChangeLog,v 1.3 2006/08/19 12:35:56 lisa Exp $

*backup-manager-0.7.4 (19 Aug 2006)

  19 Aug 2006; Lisa Seelye <lisa@gentoo.org>
  +files/backup-manager-upload-execution-fix-0.7.4.diff,
  +backup-manager-0.7.4.ebuild:
  Version bump for bug #143097

  06 Jun 2006; Lisa Seelye <lisa@gentoo.org> files/Makefile-fix.diff,
  backup-manager-0.7.2.ebuild:
  Perl installation fix, bug 135686. remove from /usr/share and put to
  /usr/lib. piggyback on Makefile-fix.diff

*backup-manager-0.7.2 (05 Jun 2006)

  05 Jun 2006; Lisa Seelye <lisa@gentoo.org> +files/Makefile-fix.diff,
  +files/backup-manager-upload-execution-fix.diff,
  +files/bzip2-path-fix.diff, +metadata.xml, +backup-manager-0.7.2.ebuild:
  New ebuild submitted by Park Ji-in, mithrandir at electrang dot net, bug 126638
