@@ -1,0 +1,43 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-backup/backup-manager/backup-manager-0.7.5.ebuild,v 1.1 2007/01/14 15:52:13 ticho Exp $
+
+inherit eutils
+
+DESCRIPTION="Backup Manager is a command line backup tool for GNU/Linux."
+HOMEPAGE="http://www.backup-manager.org/"
+SRC_URI="http://www.backup-manager.org/download/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86"
+IUSE="doc"
+
+DEPEND="dev-lang/perl
+	sys-devel/gettext"
+
+src_unpack() {
+	unpack ${A}
+	cd ${S}
+	epatch ${FILESDIR}/Makefile-fix.diff
+	#epatch ${FILESDIR}/Makefile-perl-path-fix.diff
+}
+
+src_compile() {
+	# doing nothing, cause a call to make would start make install
+	true
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die "install failed"
+	use doc && dodoc doc/user-guide.txt
+}
+
+pkg_postinst() {
+	einfo "After installing,"
+	einfo "copy ${ROOT%/}/usr/share/backup-manager/backup-manager.conf.tpl to"
+	einfo "/etc/backup-manager.conf and customize it for your environment."
+	einfo "You could also set-up your cron for daily or weekly backup."
+	ebeep 3
+	ewarn "New configuration keys have been defined. Please check the docs for info"
+}
