@@ -1,0 +1,3 @@
+MD5 76e1c9cea0b8fb210d3862fd89e09c08 backup-manager-0.7.5.tar.gz 159855
+RMD160 1b21f2129799f40e0fff9c3fa7ac2fccfbec3521 backup-manager-0.7.5.tar.gz 159855
+SHA256 a7aa04ebec5b8a80d5e75d48121092afb969e1efb252b1ffdbcd28b04225e55a backup-manager-0.7.5.tar.gz 159855
