@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-    <herd>app-backup</herd>
+	<herd>app-backup</herd>
+	<maintainer>
+		<email>ticho@gentoo.org</email>
+	</maintainer>
 </pkgmetadata>
