@@ -1,6 +1,12 @@
 # ChangeLog for app-backup/backup-manager
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/backup-manager/ChangeLog,v 1.3 2006/08/19 12:35:56 lisa Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-backup/backup-manager/ChangeLog,v 1.4 2007/01/14 15:52:13 ticho Exp $
+
+*backup-manager-0.7.5 (14 Jan 2007)
+
+  14 Jan 2007; Andrej Kacian <ticho@gentoo.org> metadata.xml,
+  +backup-manager-0.7.5.ebuild:
+  Version bump. Set myself as maintainer.
 
 *backup-manager-0.7.4 (19 Aug 2006)
 
